--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@neondatabase/serverless": "^1.0.2",
     "@prisma/adapter-neon": "^6.18.0",
     "@prisma/client": "^6.18.0",
+    "cookie": "^1.0.2",
     "next-auth": "^4.24.11"
   }
 }
